[package]
name = "my-service-bus-shared"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { branch = "0.1.0", git = "https://github.com/MyJetTools/rust-extensions.git" }


zip = "*"
prost = "*"
prost-types = "*"
chrono = "*"
tokio = { version = "*", features = ["full"] }
