[package]
name = "my-service-bus-shared"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }


zip = "*"
prost = "*"
prost-types = "*"
chrono = "*"
tokio = { version = "*", features = ["full"] }
